force-app/main/default/objects/Contract__c/fields/Accepted_Time__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Time__c</fullName>
    <label>Accepted Time</label>
    <type>DateTime</type>
</CustomField>