force-app/main/default/objects/Contract__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <type>Url</type>
</CustomField>