force-app/main/default/objects/Contract__c/fields/Agreement_Signed_by_User_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed_by_User_IP_Address__c</fullName>
    <label>Agreement Signed by User IP Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>