force-app/main/default/objects/Contract__c/fields/Amount_Unloading_Charge__c.field-meta.xml
<CustomField>
    <fullName>Amount_Unloading_Charge__c</fullName>
    <label>Amount(Unloading Charge)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>