force-app/main/default/objects/Contract__c/fields/Base_Diesel_Rate_Rs__c.field-meta.xml
<CustomField>
    <fullName>Base_Diesel_Rate_Rs__c</fullName>
    <label>Base Diesel Rate (Rs.)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>