force-app/main/default/objects/Contract__c/fields/Cancellation_charges_National__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_charges_National__c</fullName>
    <label>Cancellation charges (National)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>