force-app/main/default/objects/Contract__c/fields/Day1__c.field-meta.xml
<CustomField>
    <fullName>Day1__c</fullName>
    <label>Day1</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>