force-app/main/default/objects/Contract__c/fields/Day2__c.field-meta.xml
<CustomField>
    <fullName>Day2__c</fullName>
    <label>Day2</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>