force-app/main/default/objects/Contract__c/fields/Day3__c.field-meta.xml
<CustomField>
    <fullName>Day3__c</fullName>
    <label>Day3</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>