force-app/main/default/objects/Contract__c/fields/Day8_and_above__c.field-meta.xml
<CustomField>
    <fullName>Day8_and_above__c</fullName>
    <label>Day8 and above</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>