force-app/main/default/objects/Contract__c/fields/Detention_charges_24_hours_to_48_hours__c.field-meta.xml
<CustomField>
    <fullName>Detention_charges_24_hours_to_48_hours__c</fullName>
    <label>Detention charges 24 h to 48 h (Rs.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>