force-app/main/default/objects/Contract__c/fields/Detention_charges_48_h_to_72_h__c.field-meta.xml
<CustomField>
    <fullName>Detention_charges_48_h_to_72_h__c</fullName>
    <label>Detention charges 48 h to 72 h (Rs.)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>