force-app/main/default/objects/Contract__c/fields/Detention_charges_after_72_hr_Rs_pe__c.field-meta.xml
<CustomField>
    <fullName>Detention_charges_after_72_hr_Rs_pe__c</fullName>
    <label>Detention charges after 72 hr (Rs.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>