force-app/main/default/objects/Contract__c/fields/Detention_charges_upto_24_hours_Rs__c.field-meta.xml
<CustomField>
    <fullName>Detention_charges_upto_24_hours_Rs__c</fullName>
    <label>Detention charges upto 24 hours (Rs.)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>