force-app/main/default/objects/Contract__c/fields/Diesel_Check_Frequency_months__c.field-meta.xml
<CustomField>
    <fullName>Diesel_Check_Frequency_months__c</fullName>
    <label>Diesel Check Frequency (months)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>