force-app/main/default/objects/Contract__c/fields/Diesel_Hike__c.field-meta.xml
<CustomField>
    <fullName>Diesel_Hike__c</fullName>
    <label>Diesel Hike %</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>