force-app/main/default/objects/Contract__c/fields/Document_Size__c.field-meta.xml
<CustomField>
    <fullName>Document_Size__c</fullName>
    <label>Document Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>