force-app/main/default/objects/Contract__c/fields/DropBoxURL__c.field-meta.xml
<CustomField>
    <fullName>DropBoxURL__c</fullName>
    <label>DropBoxURL</label>
    <type>Url</type>
</CustomField>