force-app/main/default/objects/Contract__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>DATE(YEAR(DATEVALUE(Submitted_Time__c)) ,MONTH(DATEVALUE(Submitted_Time__c)),25)</formula>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>