force-app/main/default/objects/Contract__c/fields/FTL_Status__c.field-meta.xml
<CustomField>
    <fullName>FTL_Status__c</fullName>
    <label>FTL Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>