force-app/main/default/objects/Contract__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <label>Fuel %</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>