force-app/main/default/objects/Contract__c/fields/Inclusive_Charges_in_Commercials__c.field-meta.xml
<CustomField>
    <fullName>Inclusive_Charges_in_Commercials__c</fullName>
    <label>Inclusive Charges in Commercials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loading</fullName>
            </value>
            <value>
                <fullName>Unloading</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>