force-app/main/default/objects/Contract__c/fields/Insurance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Rate__c</fullName>
    <label>Insurance Rate (%)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>