force-app/main/default/objects/Contract__c/fields/Is_GST_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Is_GST_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>