force-app/main/default/objects/Contract__c/fields/is_Latest_Contract__c.field-meta.xml
<CustomField>
    <fullName>is_Latest_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Latest Contract</label>
    <type>Checkbox</type>
</CustomField>