force-app/main/default/objects/Contract__c/fields/LastViewed__c.field-meta.xml
<CustomField>
    <fullName>LastViewed__c</fullName>
    <label>LastViewed</label>
    <type>DateTime</type>
</CustomField>