force-app/main/default/objects/Contract__c/fields/Loading_Charge__c.field-meta.xml
<CustomField>
    <fullName>Loading_Charge__c</fullName>
    <label>Loading Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As per Actuals</fullName>
            </value>
            <value>
                <fullName>Enter amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>