force-app/main/default/objects/Contract__c/fields/Multi_Drop_Pick_Charge_Rs__c.field-meta.xml
<CustomField>
    <fullName>Multi_Drop_Pick_Charge_Rs__c</fullName>
    <label>Multi-Drop/ Pick Charge (Rs.)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>