force-app/main/default/objects/Contract__c/fields/of_Freight__c.field-meta.xml
<CustomField>
    <fullName>of_Freight__c</fullName>
    <label>% of Freight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>