force-app/main/default/objects/Contract__c/fields/Placement_Guarantee_Time_hrs__c.field-meta.xml
<CustomField>
    <fullName>Placement_Guarantee_Time_hrs__c</fullName>
    <label>Placement Guarantee Time (hrs)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>