force-app/main/default/objects/Contract__c/fields/Placement_Penalty_Rs__c.field-meta.xml
<CustomField>
    <fullName>Placement_Penalty_Rs__c</fullName>
    <label>Placement Penalty (Rs.)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>