force-app/main/default/objects/Contract__c/fields/POD_Loss_Charge_Rs__c.field-meta.xml
<CustomField>
    <fullName>POD_Loss_Charge_Rs__c</fullName>
    <label>POD Loss Charge (Rs.)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>