force-app/main/default/objects/Contract__c/fields/Saas_Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Saas_Contract_Link__c</fullName>
    <label>Saas Contract Link</label>
    <type>TextArea</type>
</CustomField>