force-app/main/default/objects/Contract__c/fields/submitted_for_Approval_FTL__c.field-meta.xml
<CustomField>
    <fullName>submitted_for_Approval_FTL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>submitted for Approval(FTL)</label>
    <type>Checkbox</type>
</CustomField>