force-app/main/default/objects/Contract__c/fields/Submitted_Time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted Time</label>
    <type>DateTime</type>
</CustomField>