force-app/main/default/objects/Contract__c/fields/Tolerable_Amount_Change_Rs__c.field-meta.xml
<CustomField>
    <fullName>Tolerable_Amount_Change_Rs__c</fullName>
    <label>Tolerable Amount Change (Rs.)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>