force-app/main/default/objects/Contract__c/fields/Tolerable_Change__c.field-meta.xml
<CustomField>
    <fullName>Tolerable_Change__c</fullName>
    <label>Tolerable % Change</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>