force-app/main/default/objects/Contract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Services Agreement</fullName>
            </value>
            <value>
                <fullName>GST Agreement</fullName>
            </value>
            <value>
                <fullName>Gst Agreement(FTL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>